--- a/linear_regression/linear_regression_model_from_scratch.ipynb
+++ b/linear_regression/linear_regression_model_from_scratch.ipynb
@@ -1263,7 +1263,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#testing"
+   ]
   }
  ],
  "metadata": {
