--- a/linear_regression/linear_regression_model_from_scratch.ipynb
+++ b/linear_regression/linear_regression_model_from_scratch.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"#!/usr/bin/env python\n",
+    "#title           :linear_regression_jupyter_notebook_script\n",
+    "#description     :This script gives a small introduction about the Linear Regression.\n",
+    "#author          :Gautam\n",
+    "#date            :07/10/2023\n",
+    "#last_updated    :08/10/2023\n",
+    "#python-version         :3.10.11\n",
+    "#notes           : \n",
+    "#==============================================================================\n",
+    "\n",
+    "# Import the modules needed to run the script.\"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1264,8 +1283,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hello"
+    "#hello\n",
+    "\n",
+    "\n",
+    "8758989575-pani wala"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
