--- a/linear_regression/linear_regression_model_from_scratch.ipynb
+++ b/linear_regression/linear_regression_model_from_scratch.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#!/usr/bin/env python\\n#title           :linear_regression_jupyter_notebook_script\\n#description     :This script gives a small introduction about the Linear Regression.\\n#author          :Gautam\\n#date            :07/10/2023\\n#last_updated    :08/10/2023\\n#python-version         :3.10.11\\n#notes           : \\n#==============================================================================\\n\\n# Import the modules needed to run the script.'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"#!/usr/bin/env python\n",
     "#title           :linear_regression_jupyter_notebook_script\n",
