updating the folder structure

--- a/classification/naive_bayes_classification.ipynb
+++ b/classification/naive_bayes_classification.ipynb
@@ -12,9 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pregnancies\n",
+      "Glucose\n",
+      "BloodPressure\n",
+      "SkinThickness\n",
+      "Insulin\n",
+      "BMI\n",
+      "DiabetesPedigreeFunction\n",
+      "Age\n",
+      "Outcome\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11720\\2567081662.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[column_name].replace(to_replace = 0,value = None, inplace=True)\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11720\\2567081662.py:11: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df[column_name] = df[column_name].fillna(value = mean)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"C:/Users\\Admin\\Desktop/bits-AIML/machine_learning_practice_codes_github_folder/machine_learning/classification\\Healthcare-Diabetes.csv\")\n",
     "df = df.drop([\"Id\"], axis =1)\n",
@@ -27,6 +58,240 @@
     "    df[column_name].replace(to_replace = 0,value = None, inplace=True)\n",
     "    mean = df[column_name].mean(skipna =True)\n",
     "    df[column_name] = df[column_name].fillna(value = mean)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>154.23783</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>154.23783</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>29.289634</td>\n",
+       "      <td>154.23783</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>94.00000</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.397284</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>168.00000</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2763</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>55.00000</td>\n",
+       "      <td>29.7</td>\n",
+       "      <td>0.370</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2764</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>130.00000</td>\n",
+       "      <td>32.7</td>\n",
+       "      <td>0.719</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2765</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>29.289634</td>\n",
+       "      <td>154.23783</td>\n",
+       "      <td>31.2</td>\n",
+       "      <td>0.382</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2766</th>\n",
+       "      <td>4.397284</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>130.00000</td>\n",
+       "      <td>67.1</td>\n",
+       "      <td>0.319</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2767</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>76.00000</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>0.547</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2768 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Pregnancies  Glucose  BloodPressure  SkinThickness    Insulin   BMI  \\\n",
+       "0        6.000000    148.0           72.0      35.000000  154.23783  33.6   \n",
+       "1        1.000000     85.0           66.0      29.000000  154.23783  26.6   \n",
+       "2        8.000000    183.0           64.0      29.289634  154.23783  23.3   \n",
+       "3        1.000000     89.0           66.0      23.000000   94.00000  28.1   \n",
+       "4        4.397284    137.0           40.0      35.000000  168.00000  43.1   \n",
+       "...           ...      ...            ...            ...        ...   ...   \n",
+       "2763     2.000000     75.0           64.0      24.000000   55.00000  29.7   \n",
+       "2764     8.000000    179.0           72.0      42.000000  130.00000  32.7   \n",
+       "2765     6.000000     85.0           78.0      29.289634  154.23783  31.2   \n",
+       "2766     4.397284    129.0          110.0      46.000000  130.00000  67.1   \n",
+       "2767     2.000000     81.0           72.0      15.000000   76.00000  30.1   \n",
+       "\n",
+       "      DiabetesPedigreeFunction  Age  Outcome  \n",
+       "0                        0.627   50      1.0  \n",
+       "1                        0.351   31      1.0  \n",
+       "2                        0.672   32      1.0  \n",
+       "3                        0.167   21      1.0  \n",
+       "4                        2.288   33      1.0  \n",
+       "...                        ...  ...      ...  \n",
+       "2763                     0.370   33      1.0  \n",
+       "2764                     0.719   36      1.0  \n",
+       "2765                     0.382   42      1.0  \n",
+       "2766                     0.319   26      1.0  \n",
+       "2767                     0.547   25      1.0  \n",
+       "\n",
+       "[2768 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Outcome.unique()"
    ]
   },
   {
@@ -95,6 +360,26 @@
     "# multinomial navive bayes =  text based classification[ mostly used]\n",
     "# bernoilu based = when we have more boolean kind of variables , use \n",
     "# gaussian - when we have more continuous kind of value in feature columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "Multinomial = MultinomialNB()\n",
+    "Multinomial.fit(x_train, y_train)\n",
+    "y_pred = Multinomial.predict(x_test)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "from sklearn import metrics\n",
+    "print(\"Gaussian Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
    ]
   },
   {
