completing all the naive based model approach

--- a/classification/naive_bayes_classification.ipynb
+++ b/classification/naive_bayes_classification.ipynb
@@ -379,15 +379,66 @@
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)\n",
     "from sklearn import metrics\n",
-    "print(\"Gaussian Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
+    "print(\"MultinomialNB Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[831]]\n",
+      "MultinomialNB Naive Bayes model accuracy(in %): 100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "\n",
+    "Bernoulli = BernoulliNB()\n",
+    "Bernoulli.fit(x_train, y_train)\n",
+    "y_pred = Bernoulli.predict(x_test)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "from sklearn import metrics\n",
+    "print(\"MultinomialNB Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[831]]\n",
+      "MultinomialNB Naive Bayes model accuracy(in %): 100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "Gaussian = GaussianNB()\n",
+    "Gaussian.fit(x_train, y_train)\n",
+    "y_pred = Gaussian.predict(x_test)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "from sklearn import metrics\n",
+    "print(\"MultinomialNB Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
+   ]
   }
  ],
  "metadata": {
