--- a/classification/naive_bayes_classification.ipynb
+++ b/classification/naive_bayes_classification.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -34,20 +34,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11720\\2567081662.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11720\\1175273080.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df[column_name].replace(to_replace = 0,value = None, inplace=True)\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11720\\2567081662.py:11: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11720\\1175273080.py:12: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[column_name] = df[column_name].fillna(value = mean)\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:/Users\\Admin\\Desktop/bits-AIML/machine_learning_practice_codes_github_folder/machine_learning/classification\\Healthcare-Diabetes.csv\")\n",
+    "df = pd.read_csv(\"C:/Users/Admin/Desktop/bits-AIML/machine_learning_practice_codes_github_folder/machine_learning/classification/Healthcare-Diabetes.csv\")\n",
     "df = df.drop([\"Id\"], axis =1)\n",
     "\n",
     "\n",
@@ -55,14 +55,15 @@
     "for column_name in df.columns:\n",
     "    print(column_name)\n",
     "    # print(df[f'{column_name}'].unique())\n",
-    "    df[column_name].replace(to_replace = 0,value = None, inplace=True)\n",
-    "    mean = df[column_name].mean(skipna =True)\n",
-    "    df[column_name] = df[column_name].fillna(value = mean)\n"
+    "    if column_name != \"Outcome\":\n",
+    "        df[column_name].replace(to_replace = 0,value = None, inplace=True)\n",
+    "        mean = df[column_name].mean(skipna =True)\n",
+    "        df[column_name] = df[column_name].fillna(value = mean)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
        "      <td>33.6</td>\n",
        "      <td>0.627</td>\n",
        "      <td>50</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -120,7 +121,7 @@
        "      <td>26.6</td>\n",
        "      <td>0.351</td>\n",
        "      <td>31</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -132,7 +133,7 @@
        "      <td>23.3</td>\n",
        "      <td>0.672</td>\n",
        "      <td>32</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -144,7 +145,7 @@
        "      <td>28.1</td>\n",
        "      <td>0.167</td>\n",
        "      <td>21</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -156,7 +157,7 @@
        "      <td>43.1</td>\n",
        "      <td>2.288</td>\n",
        "      <td>33</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -180,7 +181,7 @@
        "      <td>29.7</td>\n",
        "      <td>0.370</td>\n",
        "      <td>33</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2764</th>\n",
@@ -192,7 +193,7 @@
        "      <td>32.7</td>\n",
        "      <td>0.719</td>\n",
        "      <td>36</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2765</th>\n",
@@ -204,7 +205,7 @@
        "      <td>31.2</td>\n",
        "      <td>0.382</td>\n",
        "      <td>42</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2766</th>\n",
@@ -216,7 +217,7 @@
        "      <td>67.1</td>\n",
        "      <td>0.319</td>\n",
        "      <td>26</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2767</th>\n",
@@ -228,7 +229,7 @@
        "      <td>30.1</td>\n",
        "      <td>0.547</td>\n",
        "      <td>25</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -250,22 +251,22 @@
        "2767     2.000000     81.0           72.0      15.000000   76.00000  30.1   \n",
        "\n",
        "      DiabetesPedigreeFunction  Age  Outcome  \n",
-       "0                        0.627   50      1.0  \n",
-       "1                        0.351   31      1.0  \n",
-       "2                        0.672   32      1.0  \n",
-       "3                        0.167   21      1.0  \n",
-       "4                        2.288   33      1.0  \n",
+       "0                        0.627   50        1  \n",
+       "1                        0.351   31        0  \n",
+       "2                        0.672   32        1  \n",
+       "3                        0.167   21        0  \n",
+       "4                        2.288   33        1  \n",
        "...                        ...  ...      ...  \n",
-       "2763                     0.370   33      1.0  \n",
-       "2764                     0.719   36      1.0  \n",
-       "2765                     0.382   42      1.0  \n",
-       "2766                     0.319   26      1.0  \n",
-       "2767                     0.547   25      1.0  \n",
+       "2763                     0.370   33        0  \n",
+       "2764                     0.719   36        1  \n",
+       "2765                     0.382   42        0  \n",
+       "2766                     0.319   26        1  \n",
+       "2767                     0.547   25        0  \n",
        "\n",
        "[2768 rows x 9 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,49 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.Outcome.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin',\n",
-       "       'BMI', 'DiabetesPedigreeFunction', 'Age', 'Outcome'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,9 +323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[410 135]\n",
+      " [160 126]]\n",
+      "MultinomialNB Naive Bayes model accuracy(in %): 64.50060168471721\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
     "\n",
@@ -384,15 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[831]]\n",
-      "MultinomialNB Naive Bayes model accuracy(in %): 100.0\n"
+      "[[545   0]\n",
+      " [286   0]]\n",
+      "MultinomialNB Naive Bayes model accuracy(in %): 65.58363417569194\n"
      ]
     }
    ],
@@ -413,15 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[831]]\n",
-      "MultinomialNB Naive Bayes model accuracy(in %): 100.0\n"
+      "[[456  89]\n",
+      " [127 159]]\n",
+      "MultinomialNB Naive Bayes model accuracy(in %): 74.0072202166065\n"
      ]
     }
    ],
@@ -439,6 +410,13 @@
     "from sklearn import metrics\n",
     "print(\"MultinomialNB Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
