adding project folder

--- a/Projects/heart_attack_analysis_project/main.ipynb
+++ b/Projects/heart_attack_analysis_project/main.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "2. sex - sex (1 = male; 0 = female)\n",
     "\n",
-    "3. cp - chest pain type (1 = typical angina[basically caused with exertion not a high symptom of heart attack]; 2 = atypical angina; 3 = non-anginal pain; 0 = asymptomatic)\n",
+    "3. cp - chest pain type (1 = typical angina[very high correlation with heart attack]; 2 = atypical angina; 3 = non-anginal pain[not related to heart disease]; 0 = asymptomatic[Person does not have heart disease])\n",
     "\n",
     "4. trestbps - resting blood pressure (in mm Hg on admission to the hospital)\n",
     "\n",
@@ -30,11 +30,11 @@
     "\n",
     "6. fbs - fasting blood sugar > 120 mg/dl (1 = true; 0 = false)\n",
     "\n",
-    "7. restecg - resting electrocardiographic results (1 = normal; 2 = having ST-T wave abnormality; 0 = hypertrophy)\n",
+    "7. restecg - resting electrocardiographic results (1 = normal; 2 = having ST-T wave abnormality; 0 = hypertrophy[the thickening of the heart muscle, usually in response to increased workload])[this basically checks about the heart electrical signals, how it is performing]\n",
     "\n",
     "8. thalach - maximum heart rate achieved\n",
     "\n",
-    "9. exang - exercise induced angina (1 = yes; 0 = no)\n",
+    "9. exang - exercise induced angina (1 = yes; 0 = no)[The term \"exang\" in a medical context, especially in relation to cardiac assessments like a stress test, refers to whether a person experiences angina (chest pain) induced by exercise.]\n",
     "\n",
     "10. oldpeak - ST depression induced by exercise relative to rest\n",
     "\n",
